project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Session__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration (in seconds).</description>
    <inlineHelpText>Duration (in seconds).</inlineHelpText>
    <label>Duration</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>