project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Session__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dev_Team</valueSetName>
    </valueSet>
</CustomField>