project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Session__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <label>Learner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>