project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Session__c/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <label>Tutor</label>
    <referenceTo>Tutor__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>